frontend-training/greg/html-css-course-master/starter/07-Omnifood-Desktop/css/style.css
/***************************************/
/* HEADER */
/***************************************/
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #fdf2e9;
    /* Because we want the navigation to be sticky later*/
    height: 9.6rem;
    padding: 0 4.8rem;
}

.logo {
    height: 2.2rem;
}

/***************************************/
/* NAVIGATION*/
/***************************************/

.main-nav-list {
    list-style: none;
    display: flex;
    align-items: center;
    gap: 3.2rem;
}


.main-nav-link:link,
.main-nav-link:visited {
    display: inline-block;
    text-decoration: none;
    color: #333;
    font-weight: 500;
    font-size: 1.8rem;
    transition: all 0.3s;
}

.main-nav-link:active,
.main-nav-link:hover {
    color: #cf711f;
}

.main-nav-link.nav-cta:link,
.main-nav-link.nva-cta:visited {
    display: inline-block;
    padding: 1.2rem 2.4rem;
    border-radius: 9px;
    color: #fff;
    background-color: #e67e22;
}

.main-nav-link.nav-cta:hover,
.main-nav-link.nva-cta:active {
    background-color: #cf711f;
}

/***************************************/
/* HERO COMPONENTS*/
/***************************************/

.section-hero {
    background-color: #fdf2e9;
    padding: 4.8rem 0 9.6rem 0;
}

.hero {
    max-width: 130rem;
    margin: 0 auto;
    padding: 0 3.2rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 9.6rem;
    align-items: center;
}


.hero-description {
    font-size: 2rem;
    line-height: 1.6;
    margin-bottom: 4.8rem;
}


.hero-img {
    width: 100%;
}


.delivered-meals {
    display: flex;
    align-items: center;
    gap: 1.6rem;
    margin-top: 8rem;
}

.delivered-imgs {
    display: flex;
}

.delivered-imgs img {
    height: 4.8rem;
    width: 4.8rem;
    border-radius: 50%;
    margin-right: -1.6rem;
    border: 3px solid #fdf2e9;
}

.delivered-imgs img:last-child {
    margin-right: 0;
}

.delivered-text {
    font-size: 1.8rem;
    font-weight: 600;
}

.delivered-text span {
    color: #cf711f;
    weight: 700;
}

/***************************************/
/* FEATURED IN  SECTION*/
/***************************************/

.section-featured {
    padding: 4.8rem 0 3.2rem 0;
}

.heading-featured-in {
    font-size: 1.4rem;
    text-transform: uppercase;
    letter-spacing: 0.75px;
    font-weight: 500;
    text-align: center;
    margin-bottom: 2.4rem;
    color: #888;
}

.logos {
    display: flex;
    justify-content: space-around;
}

.logos img {
    height: 3.2rem;
    filter: brightness(0);
    opacity: 50%;
}

/***************************************/
/* HOW IT WORKS  SECTION*/
/***************************************/
.section-how {
    padding: 9.6rem 0;
}

.step-number {
    font-size: 8.6rem;
    font-weight: 600;
    color: #ddd;
    margin-bottom: 1.2rem;
}

.step-description {
    font-size: 1.8rem;
    line-height: 1.8;
}

.step-img-box {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.step-img-box::before {
    content: "";
    display: block;
    width: 90%;
    /*height: 60%;*/
    /* 60% of the parent's width*/
    padding-bottom: 90%;
    border-radius: 50%;
    background-color: #fdf2e9;
    position: absolute;
    z-index: -2;
}

.step-img-box::after {
    content: "";
    display: block;
    width: 70%;
    /*height: 60%;*/
    /* 60% of the parent's width*/
    padding-bottom: 70%;
    border-radius: 50%;
    background-color: #fae5d3;
    position: absolute;
    z-index: -1;
}

.step-img {
    width: 50%;
}


/***************************************/
/* MEALS  SECTION*/
/***************************************/

.section-meals {
    padding: 9.6rem 0;
}

.meal {
    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
    border-radius: 11px;
    overflow: hidden;
    transition: all 0.4s;
}

.meal-tags {
    margin: 1.2rem;
    display: flex;
    gap: 0.6rem;
}

.tag {
    display: inline-block;
    padding: 0.4rem 0.8rem;
    font-size: 1.2rem;
    text-transform: uppercase;
    color: #333;
    border-radius: 100px;
    font-weight: 600;
}

.tag--vegetarian {
    background-color: #51cf66;
}

.tag--vegan {
    background-color: #94d82d;
}

.tag--paleo {
    background-color: #ffd43b;
}

.meal:hover {
    transform: translateY(-1.2rem);
    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.065);

}

.meal-content {
    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
}

.meal-title {
    font-size: 2.4rem;
    color: #333;
    font-weight: 600;
    margin-bottom: 3.2rem;
}

.meal-attributes {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.meal-attribute {
    font-size: 1.8rem;
    display: flex;
    align-items: center;
    gap: 1.6rem;
}

.meal-img {
    width: 100%;
}

.meal-icon {
    height: 2.4rem;
    width: 2.4rem;
    color: #e67e22;
}

.all-recipes {
    text-align: center;
    font-size: 1.8rem;
}

.list {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
}

.list-item {
    font-size: 1.8rem;
    display: flex;
    align-items: center;
    gap: 1.6rem;
}

.list-icon {
    width: 3rem;
    height: 3rem;
    color: #e67e22;
}

/*  TESTIMONIALS SECTION */

.section-testimonials {
    padding: 9.6rem 0;
}

.testimonials {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 4.8rem;
}

.testimonial-img {
    width: 6.4rem;
    border-radius: 50%;
    margin-bottom: 1.2rem;
}

.testimonial-text {
    font-size: 1.8rem;
    line-height: 1.8;
    margin-bottom: 1.6rem;
}

.testimonial-name {
    font-size: 1.6rem;
    color: #777;
}

